# modbus_gateway

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  config_example.json
contrib/: CMakeLists.txt
modbus_gateway/: CMakeLists.txt  config_example.json  i_router.h  main.cpp  modbus_gateway.cpp  modbus_message_info.cpp  modbus_message_info.h  modbus_tcp_connection.cpp  modbus_tcp_connection.h  modbus_tcp_master.cpp  modbus_tcp_server.cpp  modbus_tcp_server.h  modbus_tcp_slave.cpp  modbus_tcp_slave.h  router.cpp  router.h  tcp_server.cpp  tcp_server.h  types.h
modbus_gateway/common/: fmt_logger.h  limit_queue.h
modbus_gateway/config/: config.cpp  config.h  extractor.h  i_transport_config.cpp  invalid_type_exception.h  key_not_found_exception.cpp  key_not_found_exception.h  keys.h  parser_exception.h  tcp_client_config.cpp  tcp_client_config.h  tcp_server_config.cpp  trace_deep.cpp  trace_deep.h  trace_path.cpp  trace_path.h  unit_id_range.cpp  unit_id_range.h  validators.cpp  value_type.h
modbus_gateway/messages/: client_disconnect_message.cpp  modbus_message.cpp  modbus_message.h
modbus_gateway/modbus/: CMakeLists.txt
modbus_gateway/modbus/include/modbus/: modbus_buffer.h  modbus_buffer_ascii_wrapper.h  modbus_buffer_rtu_wrapper.h  modbus_buffer_tcp_wrapper.h  modbus_buffer_wrapper.h  modbus_framing.h  modbus_types.h
modbus_gateway/modbus/src/: modbus_buffer.cpp  modbus_buffer_ascii_wrapper.cpp  modbus_buffer_rtu_wrapper.cpp  modbus_buffer_tcp_wrapper.cpp  modbus_buffer_wrapper.cpp  modbus_framing.cpp  modbus_types.cpp
modbus_gateway/test/: CMakeLists.txt  modbus_common.cpp  modbus_common.h  modbus_message_actor.cpp  modbus_test_common.cpp  modbus_test_common.h  single_router.cpp
modbus_gateway/test/modbus/: test_modbus_buffer.cpp  test_modbus_buffer_ascii_wrapper.cpp  test_modbus_buffer_rtu_wrapper.cpp  test_modbus_buffer_tcp_wrapper.cpp  test_modbus_framing.cpp  test_modbus_types.cpp
modbus_gateway/test/modbus_gateway/: test_config.cpp  test_modbus_tcp_connection.cpp  test_unit_id_range.cpp
modbus_gateway_old/: command_line.cpp  command_line.h  command_line_exception.cpp  command_line_exception.h  i_modbus_slave.cpp  i_modbus_slave.h  main.cpp  modbus_gateway.h  modbus_tcp_master.h  modbus_tcp_server.cpp
modbus_gateway_old/common/: fmt_logger.cpp  synchronized.h
modbus_gateway_old/config/: config_types.h  convertors.cpp  convertors.h  extractor.cpp  i_transport_config.h  invalid_type_exception.cpp  invalid_value_exception.cpp  invalid_value_exception.h  modbus_client_config.cpp  modbus_client_config.h  parser_exception.cpp  tcp_server_config.h  validators.cpp  validators.h  value_type.cpp
modbus_gateway_old/messages/: client_disconnect_message.h
modbus_gateway_old/test/: modbus_common.h  modbus_message_actor.h  modbus_tcp_client.cpp  modbus_tcp_client.h  single_router.h
modbus_gateway_old/test/modbus_gateway/: test_config.cpp  test_config_convertors.cpp  test_config_extractor.cpp  test_modbus_tcp_connection.cpp
src/: CMakeLists.txt  config_example.json  main.cpp  modbus_gateway.cpp  modbus_gateway.h
src/command_line/: CMakeLists.txt  command_line.cpp  command_line.h  command_line_exception.cpp
src/command_line/include/command_line/: command_line_exception.h
src/common/: CMakeLists.txt  fmt_logger.cpp  fmt_logger.h  synchronized.h  types_asio.h
src/common/include/common/: fmt_logger.h  limit_queue.h  logger.h  synchronized.h  types_modbus.h
src/config/: CMakeLists.txt  config.cpp  config.h  config_service.cpp  config_service.h  convertors.cpp  convertors.h  extractor.cpp  extractor.h  i_transport_config.cpp  i_transport_config.h  invalid_type_exception.cpp  invalid_value_exception.cpp  invalid_value_exception.h  key_not_found_exception.cpp  key_not_found_exception.h  keys.h  master_config.cpp  parser_exception.cpp  parser_exception.h  rtu_maser_config.cpp  rtu_maser_config.h  rtu_slave_config.cpp  rtu_slave_config.h  tcp_client_config.cpp  tcp_client_config.h  tcp_server_config.cpp  tcp_server_config.h  trace_deep.cpp  trace_deep.h  trace_path.cpp  unit_id_range.cpp  value_type.cpp
src/config/include/config/: config_service.h  config_types.h  extractor.h  i_transport_config.h  invalid_type_exception.h  keys.h  master_config.h  rtu_slave_config.h  tcp_server_config.h  trace_path.h  unit_id_range.h  value_type.h
src/message/: CMakeLists.txt  client_disconnect_message.cpp  client_disconnect_message.h  modbus_message.cpp  modbus_message.h  modbus_message_info.cpp  modbus_message_info.h
src/message/include/message/: client_disconnect_message.h  modbus_message.h
src/transport/: CMakeLists.txt  i_modbus_slave.cpp  i_router.h  modbus_rtu_master.cpp  modbus_rtu_master.h  modbus_rtu_slave.cpp  modbus_rtu_slave.h  modbus_tcp_client.cpp  modbus_tcp_client.h  modbus_tcp_connection.cpp  modbus_tcp_connection.h  modbus_tcp_server.cpp  modbus_tcp_server.h  router.cpp  router.h  rtu_options.cpp  rtu_options.h
src/transport/include/transport/: i_modbus_slave.h  irouter.h  modbus_rtu_master.h  modbus_rtu_slave.h  modbus_tcp_client.h  modbus_tcp_connection.h  modbus_tcp_server.h  rtu_options.h  transport_type.h
test/: CMakeLists.txt  modbus_test_common.cpp  modbus_test_common.h  test_config.cpp  test_main.cpp  test_modbus_rtu_master.cpp  test_modbus_rtu_slave.cpp  test_modbus_tcp_client.cpp  test_modbus_tcp_connection.cpp
test/common/: context_runner.cpp  context_runner.h  misc.cpp  misc.h  modbus_message_actor.cpp  modbus_message_actor.h  modbus_message_sender.cpp  modbus_message_sender.h  rtu_creator.cpp  rtu_creator.h  single_router.cpp  single_router.h  test_modbus_rtu_master.cpp  test_modbus_rtu_master.h  test_modbus_rtu_slave.cpp  test_modbus_rtu_slave.h  test_modbus_tcp_client.cpp  test_modbus_tcp_client.h  test_modbus_tcp_server.cpp  test_modbus_tcp_server.h
test/modbus/: test_modbus_buffer.cpp  test_modbus_buffer_ascii_wrapper.cpp  test_modbus_buffer_rtu_wrapper.cpp  test_modbus_buffer_tcp_wrapper.cpp  test_modbus_framing.cpp  test_modbus_types.cpp
toolchain/: arm.cmake  arm64.cmake
